[package]
name = "no_engine_prototype"
version = "0.1.0"
authors = ["Gilberto Timotheo Junior <barbafh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"

[dependencies.sdl2]
version = "0.32.1"
# default-features = false
features = ["image"]
